Fix comment message overflow when zooming (#10)

--- a/assets/css/comments.css
+++ b/assets/css/comments.css
@@ -145,6 +145,8 @@
 }
 
 .post-comment-message {
+    display: flex;
+    flex-direction: column;
     margin: 2rem 0;
 }
 
